--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react": "^16.4.1",
     "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.4.1",
+    "react-intl": "^2.4.0",
     "react-loadable": "^5.4.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
@@ -38,7 +39,8 @@
     "reactstrap": "^6.1.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-jest": "^23.0.1",
